ingress/ingress-http-go.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-go-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /welcome/test
spec:
  rules:
    - http:
        paths:
          - path: /welcome/test
            pathType: Exact
            backend:
              service:
                name: http-go
                port:
                  number: 80
